PostList and PostItem

--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,124 @@
 @import url('https://fonts.googleapis.com/icon?family=Material+Icons');
 
 * {
-    margin: 0;
-    padding: 0;
-    outline: 0;
-    box-sizing: border-box;
-  }
-  
-  html,
-  body,
-  #app {
-    height: 100%;
-  }
-  
-  body {
-    font-family: Arial, Helvetica, sans-serif;
-    background: #f2f2f2;
-  }
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
 
-header{
-    background: #4a90e2;
-    display: flex;
-    justify-content: center;
+html,
+body,
+#app {
+  height: 100%;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background: #f2f2f2;
+}
+
+header {
+  background: #4a90e2;
+  display: flex;
+  justify-content: center;
 }
 
 header nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 64px;
-    padding: 0 30px;
-    color: #fff;
-    min-width: 980px;
-    font-size: 14px;
-  }
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 64px;
+  padding: 0 42px;
+  color: #fff;
+  min-width: 980px;
+  font-size: 14px;
+}
 
-nav button{
-    font-size: 15px;
-    font-weight: bold;
-    color: #FFF;
-    background: transparent;
-    border: none;
-    display: flex;
-    align-items: center;
+
+nav button{ 
+  font-size: 15px; 
+  font-weight: bold; 
+  color: #FFF; 
+  background: transparent; 
+  border: none; 
+  display: flex; 
+  align-items: center; 
+}
+
+.postlist {
+  width: 700px;
+  margin: 0 auto;
+}
+
+.post {
+  margin: 10px 0;
+  border-radius: 8px;
+  background: #FFF;
+  padding: 20px;
+  color: #3e3e3e;
+  line-height: 20px;
+  
+}
+
+.post-header {
+  display: flex;
+  align-items: center;
+}
+
+.post-header .details {
+  margin-left: 10px;
+  display: flex;
+  flex-direction: column;
+  font-size: 11px;
+  color: #9a9a9a;
+  line-height: 14px;
+}
+
+.post-header .details span:first-child {
+  font-size: 14px;
+  color: #4a4a4a;
+  font-weight: bold;
+  margin-bottom: 3px;
+}
+
+.avatar {
+  min-height: 32px;
+  min-width: 32px;
+  height: 32px;
+  width: 32px;
+  border-radius: 50%;
+}
+
+.post-content {
+  margin-top: 15px;
+  font-size: 14px;
+}
+
+hr {
+  border: none;
+  height: 1px;
+  background: #eeeeee;
+}
+
+.post-comments {
+  margin-top: 20px;
+}
+
+.comment {
+  margin-top: 20px;
+  display: flex;
+}
+
+.comment p {
+  border-radius: 10px;
+  background: #eeeeee;
+  margin-left: 10px;
+  padding: 15px;
+  font-size: 13px;
+}
+
+.comment span {
+  font-weight: bold;
+  margin-right: 6px;
 }
